# dcc-scryfall

./: .gitignore  Cargo.toml
src/: color.rs  imageuri.rs  lib.rs  list.rs
src/card/: core.rs  face.rs  gameplay.rs  identifier.rs  legality.rs  mod.rs  price.rs  print.rs  related.rs
src/client/: client.rs  endpoints.rs  mod.rs
src/client/endpoints/: collection.rs  id.rs  mod.rs  multiverse.rs  random.rs  search.rs  set_collector.rs
src/client/endpoints/cards/: arena.rs  autocomplete.rs  collection.rs  mod.rs  mtgo.rs  named.rs  set_collector.rs  tcgplayer.rs
src/client/endpoints/sets/: code.rs  id.rs  mod.rs  tcgplayer.rs
src/set/: mod.rs
tests/: arena_request.rs  autocomplete_request.rs  card_arena_request.rs  card_autocomplete_request.rs  card_fuzzy_named_request.rs  card_identifiers_request.rs  card_invalid_named_request.rs  card_list_request.rs  card_mtgo_request.rs  card_multiverse_request.rs  card_random_request.rs  card_scryfall_request.rs  card_set_collector_request.rs  card_tcgplayer_request.rs  deserialize_card_list.rs  deserialize_single_card.rs  deserialize_single_land.rs  helper.rs  identifiers_request.rs  invalid_named_request.rs  mtgo_request.rs  multiverse_request.rs  random_request.rs  scryfall_request.rs  set_code_request.rs  set_id_request.rs  set_tcgplayer_request.rs  tcgplayer_request.rs
