[package]
name = "dcc-scryfall"
version = "0.2.0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dev-dependencies.tokio]
version = "1.0"